# 3_pandas

./: .gitignore  pyproject.toml
EGK_App/: read_pandas.py
InClassExamples/Pandas_Einführung/: PÜ3_1_LoadingData.ipynb  PÜ3_2_Pandas.ipynb
InClassExamples/Pandas_Einführung/Data/: data.csv
