[project]
name = "3_pandas"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cedric Rissi", email = "cedric.rissi2003@gmail.com"},
]
dependencies = ["numpy>=2.4.6", "ipykernel>=7.2.0", "pandas>=3.0.3", "plotly-express>=0.4.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
